--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "import-jsx": "^2.0.0",
     "ink": "^2.1.1",
+    "ink-spinner": "^3.0.1",
     "react": "^16.8.6",
     "sharp": "^0.22.0"
   }
