somehow didn't add minimist to the package.json, oop

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "import-jsx": "^2.0.0",
     "ink": "^2.1.1",
     "ink-spinner": "^3.0.1",
+    "minimist": "^1.2.0",
     "react": "^16.8.6",
     "sharp": "^0.22.0"
   }
