switch to e2e-verdaccio

--- a/package.json
+++ b/package.json
@@ -37,9 +37,10 @@
     "sharp": "^0.22.0"
   },
   "scripts": {
-    "test:publish": "bash publish-test.sh"
+    "test:publish": "e2e-verdaccio"
   },
   "devDependencies": {
+    "e2e-verdaccio": "^1.0.0",
     "npm-cli-login": "^0.1.1"
   }
 }
