--- a/package.json
+++ b/package.json
@@ -1,45 +1,46 @@
 {
-  "name": "pwa-icon-gen",
-  "description": "A CLI tool for generating PWA PNG icons of different sizes from an existing image.",
-  "keywords": [
-    "pwa",
-    "icon",
-    "generator",
-    "gen",
-    "progressive-web-app",
-    "cli"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/ChrisBrownie55/pwa-icon-gen.git"
-  },
-  "homepage": "https://github.com/ChrisBrownie55/pwa-icon-gen#readme",
-  "bugs": {
-    "url": "https://github.com/ChrisBrownie55/pwa-icon-gen/issues",
-    "email": "chbphone55@gmail.com"
-  },
-  "version": "1.0.2",
-  "main": "./src/index.js",
-  "bin": {
-    "pwa-icon-gen": "./src/cli.js"
-  },
-  "files": [
-    "src/**"
-  ],
-  "license": "MIT",
-  "dependencies": {
-    "@chbphone55/pretty-bytes": "^1.0.0",
-    "import-jsx": "^2.0.0",
-    "ink": "^2.1.1",
-    "ink-spinner": "^3.0.1",
-    "minimist": "^1.2.0",
-    "react": "^16.8.6",
-    "sharp": "^0.22.0"
-  },
-  "scripts": {
-    "test:publish": "e2e-verdaccio"
-  },
-  "devDependencies": {
-    "e2e-verdaccio": "^1.0.0"
-  }
+	"name": "pwa-icon-gen",
+	"description": "A CLI tool for generating PWA PNG icons of different sizes from an existing image.",
+	"keywords": [
+		"pwa",
+		"icon",
+		"generator",
+		"gen",
+		"progressive-web-app",
+		"cli"
+	],
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/ChrisBrownie55/pwa-icon-gen.git"
+	},
+	"homepage": "https://github.com/ChrisBrownie55/pwa-icon-gen#readme",
+	"bugs": {
+		"url": "https://github.com/ChrisBrownie55/pwa-icon-gen/issues",
+		"email": "chbphone55@gmail.com"
+	},
+	"version": "1.0.2",
+	"main": "./src/index.js",
+	"bin": {
+		"pwa-icon-gen": "./src/cli.js"
+	},
+	"files": [
+		"src/**"
+	],
+	"license": "MIT",
+	"dependencies": {
+		"@chbphone55/pretty-bytes": "^1.0.0",
+		"import-jsx": "^2.0.0",
+		"ink": "^2.1.1",
+		"ink-spinner": "^3.0.1",
+		"minimist": "^1.2.5",
+		"react": "^16.8.6",
+		"sharp": "^0.22.0"
+	},
+	"scripts": {
+		"test": "node ./src/cli.js logo.svg --out=test-out/ --sizes=75,100,125",
+		"format": "prettier --write ."
+	},
+	"devDependencies": {
+		"prettier": "^2.2.0"
+	}
 }
